Make a public getter method for the package path entries on `SkyframeExecutor`.
This way a method reference to `SkyframeExecutor#getPackagePathEntries` fulfills `PackagePathCodecDependencies` and we don't need to expose the mutable `AtomicReference<PathPackageLocator>`.

PiperOrigin-RevId: 774805639
Change-Id: I2cee78ed721d06585b0622407ac7f9da78951de1